--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Mike Sampson <mike@sambodata.com>"]
 
 [dependencies]
 piston_window = "*"
+gfx_device_gl ="0.8.2"
+gfx = "*"
+piston2d-gfx_graphics = "*"
